# KiwiEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_CN.md
Config/: DefaultEngine.ini
GLShaders/: DefaultLit.glsl  Unlit.glsl  Wireframe.glsl
PostProcessShaders/: Grayscale.hlsl  Tonemap.hlsl  Vignette.hlsl
Shaders/: BufferVisualization.hlsl  Common.hlsli  Default.hlsl  DefaultLit.hlsl  DeferredAmbient.hlsl  DeferredLighting.hlsl  GBufferPass.hlsl  ShadowPass.hlsl  Skybox.hlsl  Unlit.hlsl  Wireframe.hlsl
Textures/: README.txt
docs/: ShaderCompilationPipeline.drawio
include/Core/: Application.h  EditorInput.h  EngineConfig.h  Window.h
include/Debug/: RenderDocIntegration.h
include/Math/: Math.h
include/RHI/: DXCCompiler.h  README.md  RHI.h  RHITypes.h
include/RHI/DX11/: DX11Device.h  DX11Headers.h  DX11Resources.h  DX11Utils.h
include/RHI/DX12/: DX12Device.h  DX12Headers.h  DX12Resources.h
include/RHI/GL/: GLDevice.h  GLHeaders.h  GLResources.h
include/RHI/Vulkan/: VulkanDevice.h  VulkanHeaders.h
include/Scene/: CameraComponent.h  Component.h  GLShaders.h  GPUScene.h  LightComponent.h  Material.h  Mesh.h  MeshComponent.h  ModelImporter.h  PostProcessComponent.h  PostProcessShaderLibrary.h  PostProcessShaders.h  PrimitiveType.h  Scene.h  SceneObject.h  ShaderLibrary.h  Shaders.h  ShadingModel.h  TextureManager.h  ViewMode.h
src/: main.cpp
src/Core/: Application.cpp  EngineConfig.cpp  Window.cpp
src/Debug/: RenderDocIntegration.cpp
src/RHI/: DX11Device.cpp  DX12Device.cpp  DXCCompiler.cpp  GLDevice.cpp  VulkanDevice.cpp
src/Scene/: GPUScene.cpp  Material.cpp  Mesh.cpp  ModelImporter.cpp  Scene.cpp  TextureManager.cpp  stb_image_impl.cpp
tools/: compile_shaders.mjs
